--- a/app/views/meetings/new.html.erb
+++ b/app/views/meetings/new.html.erb
@@ -1,5 +1,7 @@
+<div class="container-xl text-center">
 <h1>New Meeting</h1>
-
+<div class="card">
 <%= render 'form', meeting: @meeting %>
-
+</div>
 <%= link_to 'Back', meetings_path %>
+</div>
