--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -1,3 +1,5 @@
+<div class="container-xl text-center">
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -17,3 +19,4 @@
 
 <%= link_to 'Edit', edit_meeting_path(@meeting) %> |
 <%= link_to 'Back', meetings_path %>
+</div>
