--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -4,7 +4,7 @@
 <p id="notice"><%= notice %></p>
 
 <h1 class="text-center">Meetings Tracker</h1>
-
+<hr>
 <%= month_calendar events: @meetings do |date, meetings| %>
   <%= date %>
 </p>
@@ -14,31 +14,34 @@
     </div>
   <% end %>
 <% end %>
+<hr>
 
-<table>
-  <thead>
-    <tr class="table-dark">
-      <th>Name</th>
-      <th>Start time</th>
-      <th>End time</th>
-      <th colspan="3"></th>
+<h3 class="text-center">Upcoming Meetings</h3>
+<table class="table">
+  <thead class="thead-light">
+    <tr class="table-primary">
+      <th scope="col">S.N</th>
+      <th scope="col">Meeting</th>
+      <th scope="col">Start</th>
+      <th scope="col">End</th>
+      <th scope="col">Actions</th>
+
     </tr>
   </thead>
-
   <tbody>
-    <% @meetings.each do |meeting| %>
-      <tr>
+  <% @meetings.each do |meeting| %>
+    <tr>
+      <th scope="row">1</th>
         <td><%= meeting.name %></td>
         <td><%= meeting.start_time %></td>
         <td><%= meeting.end_time %></td>
-        <td><%= link_to 'Show', meeting %></td>
-        <td><%= link_to 'Edit', edit_meeting_path(meeting) %></td>
-        <td><%= link_to 'Destroy', meeting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+        <td><%= link_to 'Show', meeting, class:"btn btn-primary", style:"color:#fff" %>
+        <%= link_to 'Edit', edit_meeting_path(meeting), class:"btn btn-info", style:"color:#fff" %>
+       <%= link_to 'Destroy', meeting, method: :delete, class:"btn btn-danger", style:"color:#fff", data: { confirm: 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
   </tbody>
 </table>
-
 <br>
 
 </div>
