--- a/app/views/meetings/index.html.erb
+++ b/app/views/meetings/index.html.erb
@@ -15,13 +15,15 @@
   <% end %>
 <% end %>
 <hr>
+<hr>
 
 <h3 class="text-center">Upcoming Meetings</h3>
 <table class="table">
   <thead class="thead-light">
-    <tr class="table-primary">
+     <tr class="table-primary">
       <th scope="col">S.N</th>
       <th scope="col">Meeting</th>
+      <th scope="col">Status</th>
       <th scope="col">Start</th>
       <th scope="col">End</th>
       <th scope="col">Actions</th>
@@ -31,8 +33,9 @@
   <tbody>
   <% @meetings.each do |meeting| %>
     <tr>
-      <th scope="row">1</th>
+        <td><%= meeting.id %></td>
         <td><%= meeting.name %></td>
+        <td><%= meeting.status %></td>
         <td><%= meeting.start_time %></td>
         <td><%= meeting.end_time %></td>
         <td><%= link_to 'Show', meeting, class:"btn btn-primary", style:"color:#fff" %>
