--- a/app/views/meeting_reminder_mailer/remind_meeting.html.erb
+++ b/app/views/meeting_reminder_mailer/remind_meeting.html.erb
@@ -1,6 +1,6 @@
 Meeting Reminder !!
 Your next meeting details:
-<%= @meeting.title %>
+<%= @meeting.name %>
 <%= @meeting.start_time %>
 <%= @meeting.end_time %>
 
